--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><base href="https://stylish-code-generator.example.com/">
+<html><head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Стильный TDI Генератор Кодов</title>
